# eduvmstore-ui

./: .gitignore  Dockerfile  LICENSE  README.md  README.rst  THIRD_PARTY_LICENSES  devstack_frontendscript.yaml  frontendscript.yaml  kolla_frontendscript.yaml  project_installation_and_configuration.md  ruff.toml  setup.cfg  todo.md
.eggs/pbr-6.1.1-py3.9.egg/EGG-INFO/: RECORD
.github/: pull_request_template.md  reviewer-lottery.yml
.github/workflows/: bandit.yml  pr_assign_reviewer.yml  ruff.yml  test.yml  tests.yml  vulture.yml
devstack/: plugin.sh  settings
myplugin/: .env  requirements.txt
myplugin/content/: api_endpoints.py  dashboard.py
myplugin/content/admin/: panel.py  tests.py  urls.py  utils.py  views.py
myplugin/content/admin/tests/: conftest.py  test_adminindex.py  test_adminutils.py  test_adminviews.py  test_views.py
myplugin/content/admin/view/: index.py
myplugin/content/admin_instructions/: panel.py  urls.py  utils.py  views.py
myplugin/content/eduvmstore/: dashboard.py  forms.py  panel.py  presets.py  tables.py  tabs.py  tests.py  urls.py  utils.py  views.py
myplugin/content/example/: panel.py  urls.py  views.py
myplugin/content/instructions/: panel.py  views.py
myplugin/content/mypanel/: panel.py  urls.py  views.py
myplugin/content/mysecondpanel/: panel.py  urls.py  views.py
myplugin/content/script/: panel.py  tests.py  urls.py  views.py
myplugin/content/tutorial/: panel.py  tests.py  urls.py  views.py
myplugin/content/tutorial_group/: __init__.py
myplugin/enabled/: _31000_my_plugin.py  _31100_my_second_plugin.py  _31150_tutorial_group.py  _31200_tutorial_group.py  _31200_tutorial_panel.py  _31210_instructions_panel.py  _31210_tutorial_panel.py  _31220_instructions_panel.py  _31220_script_panel.py  _31230_example_panel.py  _31230_script_panel.py  _31240_admin_instructions_panel.py  _31240_example_panel.py  _32000_my_new_dashboard.py
myplugin/static/css/: admin.css  create.css  details.css  edit.css  example.css  index.css  instances.css  instructions.css  script.css  tutorial.css
myplugin/static/javascript/: create.js  details.js  edit.js  index.js  instances.js
myplugin/static/js/: accordion.js  cloudinit_snippets.js  create.js  details.js  index.js  instances.js  script.js  success.js  tile.js  unsaved-warning.js
scripts/: gitlab.yaml  jupyter_notebook.yaml  jupyter_notebook_different_accounts.yaml  postgres.yaml  ssh_keys.yaml  ubuntu_usercreate_moveattributes.yaml  ubuntu_usercreation.yaml  write_files.yaml
uml-diagrams/: PLANTUML-Frontend_Architecture.txt  PlantUML-Architectur.txt  PlantUML-LaunchInstance.txt
(+41 files in other folders)
