[metadata]
name = my_plugin
summary = A panel plugin for OpenStack Dashboard to easily manage and start new instances for lecturers from the dhbw
description_file = README.md
author = wwi22sea
author_email = eduvmstore@gmail.com
home_page = __REPLACE_YOUR_PLUGIN_HOMEPAGE_URL__
classifier =
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    myplugin
